DeskApp/build_errors_3_utf8.txt
cargo :     Checking retailex v0.1.55 (D:\RetailEX\DeskApp)
At line:1 char:1
+ cargo check 2> build_errors_3.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking r 
   e...tailEX\DeskApp):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused import: `AppHandle`
 --> src\sync.rs:9:13
  |
9 | use tauri::{AppHandle, Manager, Emitter};
  |             ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)
]`) on by default

error[E0599]: no method named `receive_packet` found for str
uct `wintun::Session` in the current scope
   --> src\vpn.rs:272:42
    |
272 |         if let Ok(packet) = (*session_b).receive_packe
t() {
    |                                          ^^^^^^^^^^^^^
^ method not found in `wintun::Session`

error[E0282]: type annotations needed
   --> src\vpn.rs:273:32
    |
273 |             let bytes: &[u8] = packet.bytes();
    |                                ^^^^^^ cannot infer typ
e

warning: unused import: `tokio_postgres::NoTls`
 --> src\db_ops.rs:4:5
  |
4 | use tokio_postgres::NoTls;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)
]`) on by default

warning: unused import: `AppHandle`
 --> src\sync.rs:9:13
  |
9 | use tauri::{AppHandle, Manager, Emitter};
  |             ^^^^^^^^^

warning: unused import: `tokio::time::timeout`
   --> src\main.rs:155:9
    |
155 |     use tokio::time::timeout;
    |         ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `tokio::time::timeout`
   --> src\main.rs:207:9
    |
207 |     use tokio::time::timeout;
    |         ^^^^^^^^^^^^^^^^^^^^

warning: unused import: `rust_decimal::prelude::FromPrimitiv
e`
   --> src\main.rs:224:17
    |
224 |             use rust_decimal::prelude::FromPrimitive;
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Some errors have detailed explanations: E0282, E0599.
For more information about an error, try `rustc --explain E0
282`.
error: could not compile `retailex` (bin "RetailEX_VPN") due
 to 2 previous errors
warning: build failed, waiting for other jobs to finish...
warning: `retailex` (bin "RetailEX_Service") generated 1 war
ning
error: could not compile `retailex` (bin "RetailEX_Service")
 due to 2 previous errors; 1 warning emitted
warning: `retailex` (bin "retailex") generated 5 warnings
error: could not compile `retailex` (bin "retailex") due to 
2 previous errors; 5 warnings emitted
